force-app/main/default/objects/Freight_Capacity_Forecast__c/Freight_Capacity_Forecast__c.object-meta.xml
<CustomObject>
    <description>Freight Capacity Forecast</description>
    <label>Freight Capacity Forecast</label>
    <nameField>
        <displayFormat>QF-{YY}-{MM}-{DD}-{0000}</displayFormat>
        <label>Record number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Freight Capacity Forecast</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>