force-app/main/default/objects/Freight_Capacity_Forecast__c/fields/Calendar_Week__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Week__c</fullName>
    <inlineHelpText>Numerical representation of the calendar week for the Year (usually a number between 1-52).</inlineHelpText>
    <label>Calendar Week</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>