force-app/main/default/objects/Freight_Capacity_Forecast__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Destination</label>
    <referenceTo>Airport_Code__c</referenceTo>
    <relationshipLabel>Freight Capacity Forecast (Destination)</relationshipLabel>
    <relationshipName>Freight_Capacity_Destination</relationshipName>
    <type>Lookup</type>
</CustomField>