force-app/main/default/objects/Freight_Capacity_Forecast__c/fields/O_D_Pair1__c.field-meta.xml
<CustomField>
    <fullName>O_D_Pair1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>O&amp;D Pair</label>
    <length>7</length>
    <type>Text</type>
</CustomField>