force-app/main/default/objects/Freight_Capacity_Forecast__c/fields/Opportunity_Outlook__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Outlook__c</fullName>
    <inlineHelpText>Indicates the sales Opportunities</inlineHelpText>
    <label>Opportunity Outlook</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <color>#78C953</color>
                <label>Open</label>
            </value>
            <value>
                <fullName>Some</fullName>
                <color>#F3D904</color>
                <label>Some</label>
            </value>
            <value>
                <fullName>Limited</fullName>
                <color>#FF99FF</color>
                <label>Limited</label>
            </value>
            <value>
                <fullName>No Direct Service</fullName>
                <color>#BBBBBB</color>
                <label>No Direct Service</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>