force-app/main/default/objects/Freight_Capacity_Forecast__c/fields/Origin__c.field-meta.xml
<CustomField>
    <fullName>Origin__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Origin</label>
    <referenceTo>Airport_Code__c</referenceTo>
    <relationshipLabel>Freight Capacity Forecast</relationshipLabel>
    <relationshipName>Capacity_origin</relationshipName>
    <type>Lookup</type>
</CustomField>