force-app/main/default/objects/Freight_Capacity_Forecast__c/fields/Past__c.field-meta.xml
<CustomField>
    <fullName>Past__c</fullName>
    <formula>IF ( End_Date__c &lt; DATEVALUE (NOW()), true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Past</label>
    <type>Checkbox</type>
</CustomField>