force-app/main/default/objects/Freight_Capacity_Forecast__c/fields/Target_Rate_for_L3__c.field-meta.xml
<CustomField>
    <fullName>Target_Rate_for_L3__c</fullName>
    <label>L3 (Target Rate)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>