force-app/main/default/objects/Freight_Capacity_Forecast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>O_D_Pair__c</columns>
    <columns>Opportunity_Outlook__c</columns>
    <columns>Insights__c</columns>
    <columns>Target_Rate_for_L3__c</columns>
    <columns>Target_Rate_for_L7__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Future_Dated__c</columns>
    <columns>Past__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>