force-app/main/default/objects/Freight_Capacity_Forecast__c/listViews/Singapore.listView-meta.xml
<ListView>
    <fullName>Singapore</fullName>
    <columns>NAME</columns>
    <columns>O_D_Pair__c</columns>
    <columns>Opportunity_Outlook__c</columns>
    <columns>Insights__c</columns>
    <columns>Target_Rate_for_L3__c</columns>
    <columns>Target_Rate_for_L7__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Destination__c</field>
        <operation>equals</operation>
        <value>SIN</value>
    </filters>
    <filters>
        <field>Past__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Singapore</label>
</ListView>